# zsync

c/: client.c  configure.ac  format_string.h  getaddrinfo.c  getaddrinfo.h  http.c  make.c  progress.c
c/autotools/: sockinttypes.m4
c/librcksum/: rcksum.h  rsum.c  state.c
c/libzsync/: Makefile.am  strptime.c  zmap.c  zsync.c
